--- a/server/package.json
+++ b/server/package.json
@@ -1,27 +1,28 @@
 {
-  "name": "server",
-  "version": "1.0.0",
-  "main": "server.js",
-  "scripts": {
-    "start": "node server.js",
-    "dev": "nodemon server.js"
-  },
-  "author": "",
-  "license": "ISC",
-  "description": "",
-  "dependencies": {
-    "body-parser": "^1.20.2",
-    "cors": "^2.8.5",
-    "dotenv": "^16.4.5",
-    "express": "^4.19.2",
-    "helmet": "^7.1.0",
-    "pg": "^8.12.0",
-    "pg-hstore": "^2.3.4",
-    "postgres": "^3.4.4",
-    "sequelize": "^6.37.3",
-    "xss-clean": "^0.1.4"
-  },
-  "devDependencies": {
-    "nodemon": "^3.1.4"
-  }
+	"name": "server",
+	"version": "1.0.0",
+	"main": "server.js",
+	"scripts": {
+		"start": "node server.js",
+		"dev": "nodemon server.js",
+		"prepare": "npx sequelize-cli db:migrate"
+	},
+	"author": "",
+	"license": "ISC",
+	"description": "",
+	"dependencies": {
+		"body-parser": "^1.20.2",
+		"cors": "^2.8.5",
+		"dotenv": "^16.4.5",
+		"express": "^4.19.2",
+		"helmet": "^7.1.0",
+		"pg": "^8.12.0",
+		"pg-hstore": "^2.3.4",
+		"postgres": "^3.4.4",
+		"sequelize": "^6.37.3",
+		"xss-clean": "^0.1.4"
+	},
+	"devDependencies": {
+		"nodemon": "^3.1.4"
+	}
 }
