--- a/server/package.json
+++ b/server/package.json
@@ -7,12 +7,12 @@
 		"access": "public"
 	},
 	"scripts": {
+		"preinstall": "node generateConfig.js",
 		"start": "node app.js",
 		"prepare": "npx sequelize-cli db:migrate",
 		"start:dev": "nodemon app.js",
 		"start:test": "node start --env test",
 		"start:prod": "node start --env prod",
-		"generate-config": "node generateConfig.js",
 		"test": "echo \"Error: no test specified\" && exit 1"
 	},
 	"keywords": [
