--- a/server/package.json
+++ b/server/package.json
@@ -8,7 +8,6 @@
 	},
 	"scripts": {
 		"preinstall": "node generateConfig.js",
-		"build": "npm install pg", 
 		"start": "node app.js",
 		"prepare": "npx sequelize-cli db:migrate",
 		"start:dev": "nodemon app.js",
@@ -51,9 +50,9 @@
 		"sequelize": "^6.25.5",
 		"swagger-jsdoc": "^6.2.8",
 		"swagger-ui-express": "^4.6.2",
-		"xss-clean": "^0.1.1"
+		"xss-clean": "^0.1.1",
+		"sequelize-cli": "^6.5.2"
 	},
 	"devDependencies": {
-		"sequelize-cli": "^6.5.2"
 	}
 }
